k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-app
  template:
    metadata:
      labels:
        app: demo-app
    spec:
      containers:
        - name: demo-app-container
          image: jchuquilla/demo-app:${TAG}
          ports:
            - containerPort: 8090
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
#          readinessProbe:
#            httpGet:
#              path: /api/users
#              port: 8090
#            initialDelaySeconds: 30
#            periodSeconds: 5
#          livenessProbe:
#            tcpSocket:
#              port: 8090
#            initialDelaySeconds: 30
#            periodSeconds: 25
