k8s/service-demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-demo-app
spec:
  selector:
    app: demo-app
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
